syntax = "proto3";
package vessels;

message VesselQuery {
  string query = 1;
  uint32 total = 2;
  uint32 limit = 3;
  uint32 offset = 4;
  uint32 nextOffset = 5;

  repeated VesselInfo entries = 6;

}

message VesselInfo {
  string id = 1;
  string name = 2;
  string imo = 3;
  string ssvid = 4;
  string vesselId = 5;
  string type = 6;
  string dataset = 7;

  repeated StartEndValue authorizations = 8;
  repeated Extra extra = 9;
  repeated StartEndValue mmsi = 10;
  repeated StartEndValue callsign = 11;
  repeated StartEndValue flags = 12;

}

message Extra {
  string id = 1;
  string label = 2;
  float value = 3;
}
message StartEndValue {
  string start = 1;
  string end = 2;
  string value = 3;
}
